--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="">
             <a href="https://arinsm.github.io/Expt2/" target="_self"> <button class="btn">Experiment 2</button></a>
             <a href="https://arinsm.github.io/Expt3/" target="_self"> <button class="btn">Experiment 3</button></a>
-            <a href="https://rohan99201.github.io/form/" target="_self"> <button class="btn">Experiment 4</button></a>
+            <a href="https://arinsm.github.io/Expt4/" target="_self"> <button class="btn">Experiment 4</button></a>
             <a href="https://prphpcalculator.herokuapp.com/" target="_self"> <button class="btn">Experiment 5</button></a>
             <a href="frame10.html" target="_self"> <button class="btn">Experiment 6</button></a>
             <a href="students.xml" target="_self"> <button class="btn">Experiment 7</button></a>
