--- a/frame11.html
+++ b/frame11.html
@@ -34,7 +34,7 @@ div.container {
 <body>
 
 <div class="container">
-    <a href="https://github.com/ArinSM/onlineuserPHP.git">CLICK HERE FOR THE SOURCE CODE BELOW ARE SCREENSHOT OF OUTPUTS</a>
+    <a href="https://github.com/ArinSM/onlineuserPHP">CLICK HERE FOR THE SOURCE CODE BELOW ARE SCREENSHOT OF OUTPUTS</a>
 </div>
 
 <h2>-: PHP AND AJAX :-</h2>
