--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <a href="frame10.html" target="_self"> <button class="btn">Experiment 6</button></a>
             <a href="students.xml" target="_self"> <button class="btn">Experiment 7</button></a>
             <a href="frame11.html" target="_self"> <button class="btn">Experiment 8</button></a>
+            <a href="https://rohan207.github.io/WDL-PROJECT/" target="_self"><button class="btn">WDL Project</button></a>
             <button class="btn">Demo Button</button>
             </div>
         </body>
